--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "dev": "nodemon index"
-  }
+    "dev": "nodemon index",
+    "start": "node index",
+    "heroku-prebuild": "cd client/ && npm install && npm run build && cd.."
+  },
+  "cacheDirectories": [
+  "node_modules",
+    "client/node_modules"
+  ]
 }
