--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "nodemon index",
     "start": "node index",
-    "build": "npm install && cd client/ && npm install && npm run build",
+    "build": "CI=false && npm install && cd client/ && npm install && npm run build",
     "heroku-prebuild": "cd client/ && npm install && npm run build"
   },
   "cacheDirectories": [
